--- a/client/views/posts/posts_list.html
+++ b/client/views/posts/posts_list.html
@@ -1,7 +1,5 @@
-<template name="postsList">
-  <div class="posts">
-    {{#each posts}}
-      {{> postItem}}
-    {{/each}}
-  </div>
-</template>
+Template.postsList.helpers({
+  posts: function() {
+    return Posts.find();
+  }
+});
