Fix misplace of code.

--- a/client/views/posts/posts_list.html
+++ b/client/views/posts/posts_list.html
@@ -1,5 +1,7 @@
-Template.postsList.helpers({
-  posts: function() {
-    return Posts.find();
-  }
-});
+<template name="postsList">
+  <div class="posts page">
+    {{#each posts}}
+      {{> postItem}}
+    {{/each}}
+  </div>
+</template>
