--- a/client/views/application/layout.html
+++ b/client/views/application/layout.html
@@ -1,12 +1,12 @@
 <template name="layout">
   <div class="container">
-    <header clasa="navbar">
-      <div class="navbar-inner">
-        <a class="brand" href="{{pathFor 'postsList'}}">Microscope</a>
+    <header class="navbar navbar-default" role="navigation">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="{{pathFor 'postsList'}}">Microscope</a>
       </div>
     </header>
-    <div id="main" class="row-fluid">
-      {{yield}}
+    <div id="main">
+      {{> yield}}
     </div>
   </div>
 </template>
