--- a/client/views/posts/post_page.html
+++ b/client/views/posts/post_page.html
@@ -6,4 +6,12 @@
       {{> comment}}
     {{/each}}
   </ul>
+
+  {{#if currentUser}}
+    {{> commentSubmit}}
+  {{else}}
+    <p>Please log in to leave a comment.</p>
+  {{/if}}
 </template>
+
+
