--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -111,3 +111,8 @@ body {
  text-decoration: none;
  background: rgba(0, 0, 0, 0.1);
 }
+
+.post{
+position:relative;
+transition:all 300ms 0ms ease-in;
+}
